fix: token choice misalignment

--- a/src/components/common/Dialogs/TokenManagementDialog/TokenManagementDialogForm/TokenManagementDialogForm.css
+++ b/src/components/common/Dialogs/TokenManagementDialog/TokenManagementDialogForm/TokenManagementDialogForm.css
@@ -2,6 +2,7 @@
 @value wideButton: 160px;
 
 .tokenChoiceContainer {
+  padding-left: 2px;
   max-height: 250px;
   position: relative;
   overflow: auto;
